Henter hvert vedlegg fra Joark utenom journalpost-objektet